add error page in httpResponse

--- a/error_pages/403.html
+++ b/error_pages/403.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>500 Internal Server Error</title>
+        <title>403 Forbidden</title>
         <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -55,8 +55,8 @@
     </head>
     <body>
         <div class="error-container">
-            <div class="error-code">500</div>
-            <div class="error-message">Internal Server Error</div>
+            <div class="error-code">403</div>
+            <div class="error-message">Forbidden</div>
             <a href="/">← Go to Home</a>
         </div>
     </body>
