--- a/error_pages/500.html
+++ b/error_pages/500.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>500 Internal Server Error</title>
-        <style>
+               <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ffd89b 0%, #ff7a59 100%);
+            background: linear-gradient(135deg,#4469bf 0%,#0f172a 100%);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -25,7 +25,7 @@
         .error-code {
             font-size: 80px;
             font-weight: bold;
-            color: #ff7a59;
+            color: #073cb7;
             margin: 0;
         }
         .error-message {
@@ -44,7 +44,7 @@
         a {
             display: inline-block;
             margin-top: 20px;
-            color: #ff7a59;
+            color: #2563f6;
             text-decoration: none;
             font-weight: bold;
         }
